modified:   assets/images/avatar.png 	modified:   assets/images/favicon.png 	modified:   assets/images/logo.png 	modified:   config/_default/params.toml 	modified:   content/english/_index.md 	modified:   content/english/sections/call-to-action.md

--- a/server/newspictheme/hugoplate-main/config/_default/params.toml
+++ b/server/newspictheme/hugoplate-main/config/_default/params.toml
@@ -1,6 +1,6 @@
 #################### default parameters ############################
 # favicon module: https://github.com/gethugothemes/hugo-modules/tree/master/images#favicon-implementation
-favicon = "images/favicon.png"
+favicon = "images/avatar.png"
 # logo module: https://github.com/gethugothemes/hugo-modules/tree/master/images#logo-implementation
 logo = "images/logo.png"
 logo_darkmode = "images/logo.png"
@@ -62,11 +62,11 @@ content = "You must replace the **baseURL** in **hugo.toml** file when deploying
 # seo meta data for OpenGraph / Twitter Card
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
-keywords = ["Boilerplate", "Hugo"]
-description = "Hugo & Tailwindcss Starter"
-author = "zeon.studio"
-twitter = "zeon_studio"
-image = "images/og-image.png"
+keywords = ["ConfyUp", "Blanket"]
+description = "ConfyUp Blanket Official site"
+author = "Confy up"
+twitter = ""
+image = "images/logofull.png"
 
 
 # site verifications
